--- a/Lab1/Makefile
+++ b/Lab1/Makefile
@@ -3,6 +3,12 @@ CXXFLAGS+=-Wall -Wextra
 
 all: sudoku
 
-sudoku: neighbor.cc sudoku_basic.cc sudoku_dancing_links.cc sudoku_min_arity.cc sudoku_min_arity_cache.cc queue_pool.cpp main.cpp
+vpath %.cc algorithm
+vpath %.h algorithm
+vpath %.hpp fileReader
+vpath %.cpp thread_pool
+vpath %.h thread_pool
+
+sudoku: neighbor.cc sudoku_basic.cc sudoku_dancing_links.cc sudoku_min_arity.cc sudoku_min_arity_cache.cc queue_pool.cpp fileReader.hpp main.cpp
 
 	g++  -O2 -o $@ $^ -lpthread
