--- a/Lab1/Makefile
+++ b/Lab1/Makefile
@@ -1,7 +1,7 @@
 CXXFLAGS+=-O2 -ggdb -DDEBUG
 CXXFLAGS+=-Wall -Wextra
 
-all: sudoku
+all: sudoku_solve
 
 vpath %.cc algorithm
 vpath %.h algorithm
@@ -9,6 +9,9 @@ vpath %.hpp fileReader
 vpath %.cpp thread_pool
 vpath %.h thread_pool
 
-sudoku: neighbor.cc sudoku_basic.cc sudoku_dancing_links.cc sudoku_min_arity.cc sudoku_min_arity_cache.cc queue_pool.cpp fileReader.hpp main.cpp
+sudoku_solve: neighbor.cc sudoku_basic.cc sudoku_dancing_links.cc sudoku_min_arity.cc sudoku_min_arity_cache.cc queue_pool.cpp fileReader.hpp main.cpp
 
 	g++  -O2 -o $@ $^ -lpthread
+
+clean: 
+	rm sudoku_solve
