--- a/Lab2/Makefile
+++ b/Lab2/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS+=-Wall -Wextra
 
 all: httpserver
 
-httpserver:global.h queue_pool.cpp server.cpp TCPServer.cpp
+httpserver:global.h queue_pool.cpp server.cpp TCPServer.cpp TCPClient.cpp
 
 	g++  -O2 -o $@ $^ -lpthread
 
